changed font, fixed pagination buttons, fixed alignment issue on recipe pages

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -33,8 +33,10 @@ $text: $textLight;
 }
 
 * {
-    font-family:'Playfair Display', serif; /* Set default font */
+    font-family: 'Aptos', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
 }
+
+
 
 .navigationBar {
     top: 0;
@@ -93,11 +95,11 @@ nav {
 
 .timerBox {
     background-color: var(--secondary-color);
-    padding: 30px 40px;
+    padding: 0px 40px;
     border: solid;
     border-radius: 20px;
     box-shadow: 10px 10px 0px rgba(0, 0, 0, 0.5);
-    height: 50%;
+    height: 47.5%;
     width: 30vw;
     margin-left: 2vw;
     margin-bottom: 3vh;
@@ -517,9 +519,8 @@ html {
     justify-content: center;
     margin-top: 1em;
     gap: 0.5em;
-    position: absolute;
-    bottom: 10%;
-    left: 30%;
+    bottom: 0%;
+    align-self: center;
 }
 
 .pagination button {
@@ -688,17 +689,19 @@ html {
 .recipe-page{
     margin-top:20px;
     margin-bottom: 20px;
+    min-height: 80vh;
+    height: 90vh;
 
 }
 
 .recipe-main{
     //margin:10px;
     width:50%;
-    height: 100%;
+    height: 95%;
     vertical-align: top;
     background-color: var(--secondary-color);
     padding: 0px 40px;
-    padding-top: 30px;
+    //padding-top: 30px;
     border: solid;
     border-radius: 20px;
     box-shadow: 10px 10px 0px rgba(0, 0, 0, 0.5);
@@ -755,11 +758,11 @@ html {
 
 .recipe-side{
     background-color: var(--secondary-color);
-    padding: 30px 40px;
+    padding: 0px 40px;
     border: solid;
     border-radius: 20px;
     box-shadow: 10px 10px 0px rgba(0, 0, 0, 0.5);
-    height: 50%;
+    height: 47.5%;
     width: 30vw;
     margin-left: 2vw;
     margin-bottom: 3vh;
@@ -773,7 +776,7 @@ html {
 }
 
 .recipe-page-right {
-    height: 100%;
+    height: 95%;
     //margin-bottom: 3vh;
 }
 
